# ComputerGraphicsExercises

./: .gitignore  CMakeLists.txt  README.md
data/shaders/11_normal_mapping/: shader.fs  shader.vs
data/shaders/2_shader_class_with_uniform/: 3.3.shader.fs  3.3.shader.vs
data/shaders/3_upside_down_triangle/: 3.3.shader.fs  3.3.shader.vs
data/shaders/4_combined_textures/: 4.2.texture.fs
data/shaders/6_lighting/: colors.fs  colors.vs
data/shaders/7_light_maps/: colors.fs
data/shaders/8_directional_light/: colors.fs
data/shaders/9_multiple_lights/: colors.fs
include/: mesh.h  model.h  paths.hpp  paths.hpp.in  shader.h
libs/win/: assimp-vc140-mt.exp
src/10_load_model/: Mesh.cpp  app.cpp
src/11_normal_mapping/: app.cpp
src/2_shader_class_with_uniform/: app.cpp
src/3_upside_down_triangle/: app.cpp
src/4_combined_textures/: app.cpp
src/5_transformations/: app.cpp
src/6_lighting/: app.cpp
src/7_light_maps/: app.cpp
src/8_directional_light/: app.cpp
src/9_multiple_lights/: app.cpp
